Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26505

places app gives no warning when jsondb daemon isn't running

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.0 Beta 1
    • 5.0.0
    • Location: Places
    • None
    • ubuntu, location sha# 38494790fff6ac6445ed05126b9809ad15ff919d
    • cb673864d11e70a9acac8c5864a9f38ff9a4d5c4

      • Start Places app ( do not start jsondb)
      • Switch to jsondb plugin
      • Perform a search
        or
      • Start Places app ( do not start jsondb)
      • enable Favourites
      • Perform a search

      App hangs. User should be notified that jsondb expected to be run

        For Gerrit Dashboard: QTBUG-26505
        # Subject Branch Project Status CR V

            abcd abcd (closed Nokia identity) (Inactive)
            shubina Natalia Shubina (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes