Produce warning if connection to jsondb could not be made

Task-number: QTBUG-26505
Change-Id: I908ccf8fe5fd95e3c78ff8ac7cce335ed8dbf358
Reviewed-by: Aaron McCarthy <aaron.mccarthy@nokia.com>